tests/fixtures/errors/nested_unknown_identifier.lazy
outer = 10
f = x -> (
  inner = x + 2;
  result = inner + unknownNested;
  result
)
f 5
